--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "echarts": "^6.0.0",
     "vant": "^4.9.21",
     "vue": "^3.5.24",
-    "vue-echarts": "^8.0.1"
+    "vue-echarts": "^8.0.1",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
